# wxWidgets_Lets_Play

./: .gitignore  CMakeLists.txt  README  compile_commands.json
bezsensowne_docki_po_polsku/: doc1.md
ext/linux/lib/: libwx_baseu-3.1.so.2  libwx_baseu-3.1.so.2.0.0  libwx_baseu_net-3.1.so.2  libwx_baseu_net-3.1.so.2.0.0  libwx_baseu_xml-3.1.so.2  libwx_baseu_xml-3.1.so.2.0.0  libwx_gtk2u_adv-3.1.so.2  libwx_gtk2u_aui-3.1.so.2  libwx_gtk2u_aui-3.1.so.2.0.0  libwx_gtk2u_core-3.1.so.2  libwx_gtk2u_gl-3.1.so.2  libwx_gtk2u_gl-3.1.so.2.0.0  libwx_gtk2u_html-3.1.so.2  libwx_gtk2u_html-3.1.so.2.0.0  libwx_gtk2u_propgrid-3.1.so.2  libwx_gtk2u_propgrid-3.1.so.2.0.0  libwx_gtk2u_qa-3.1.so.2  libwx_gtk2u_qa-3.1.so.2.0.0  libwx_gtk2u_ribbon-3.1.so.2  libwx_gtk2u_ribbon-3.1.so.2.0.0  libwx_gtk2u_richtext-3.1.so.2  libwx_gtk2u_richtext-3.1.so.2.0.0  libwx_gtk2u_stc-3.1.so.2  libwx_gtk2u_stc-3.1.so.2.0.0  libwx_gtk2u_xrc-3.1.so.2  libwx_gtk2u_xrc-3.1.so.2.0.0
ext/linux/lib/wx/config/: gtk2-unicode-3.1
ext/linux/lib/wx/include/gtk2-unicode-3.1/wx/: setup.h
ext/windows/lib/mswu/wx/: setup.h
src/: .ycm_extra_conf.py  CMakeLists.txt  Test1.cpp  Test1.h  main.cpp  tags
